# blogroll

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  TODO.md  blogroll.cabal  blogroll.opml.xml  blogroll.txt  cabal.project  flake.nix  index.html  result
.claude/: settings.local.json
.github/workflows/: build-release.yml  daily-feed.yml
app/: Main.hs
scripts/: release.sh
src/Blogroll/: Error.hs  Feed.hs  Fetch.hs  Html.hs  Opml.hs  Type.hs
