cabal-version:      3.14
name:               blogroll

version:            1.0.8
license:            MIT
license-file:       LICENSE
author:             unorsk
maintainer:         25188+unorsk@users.noreply.github.com

category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md
                    README.md
                    AGENTS.md

common warnings
    ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Blogroll.Html
    Blogroll.Feed
    Blogroll.Type
    Blogroll.Fetch

  build-depends:      base ^>=4.21.0.0,
                       http-conduit,
                       xml-conduit,
                       time,
                       bytestring,
                       text,
                       containers,
                       base64-bytestring,
                       async

  hs-source-dirs:   src/
  default-language: GHC2024

executable blogroll
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.21.0.0,
                       http-conduit,
                       xml-conduit,
                       time,
                       bytestring,
                       text,
                       containers,
                       base64-bytestring,
                       async,
                       blogroll

    hs-source-dirs:   app

    default-language: GHC2024
